--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -506,6 +506,14 @@ footer .footer-container .footer-copyrightText {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.text-center {
+    text-align: center;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
 @media (max-width: 48rem) {
     .moim-container {
         grid-template-columns: repeat(2, minmax(0, 1fr));
