--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/moim_create.css"/>
     <link rel="stylesheet" href="/css/moim_detail.css"/>
     <link rel="stylesheet" href="/css/category.css"/>
-    <link rel="stylesheet" href="/css/notice_list.css"/>
+    <link rel="stylesheet" href="/css/notice.css"/>
     <link rel="stylesheet" href="/css/review_write.css"/>
     <link rel="stylesheet" href="/css/admin.css"/>
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
