--- a/src/main/resources/templates/pages/admin/moim/list.html
+++ b/src/main/resources/templates/pages/admin/moim/list.html
@@ -7,7 +7,7 @@
 <body>
 <div th:replace="~{fragments/header :: navigation}"></div>
 
-<main class="moim-container" layout:fragment="content">
+<main class="admin-moim-container" layout:fragment="content">
     <h2 class="moim-title">모임 리스트</h2>
 
     <div class="bd-example">
