--- a/src/main/resources/templates/pages/notice/list.html
+++ b/src/main/resources/templates/pages/notice/list.html
@@ -10,29 +10,24 @@
 <main class="notice-container" layout:fragment="content">
     <h2 class="notice-title">공지사항</h2>
 
-    <div class="bd-example">
-        <table class="notice-table">
-            <thead>
-            <tr>
-                <th width="80px" class="notice-title-cell">글 번호</th>
-                <th class="notice-title-cell">글 제목</th>
-                <th width="130px" class="notice-title-cell">작성자</th>
-                <th width="130px" class="notice-title-cell">작성일자</th>
-                <th width="80px" class="notice-title-cell">조회수</th>
-            </tr>
-            </thead>
-            <hr/>
-            <tbody>
-            <tr th:each="notice : ${list}">
-                <td th:text="${notice.noticeId}"></td>
-                <td th:text="${notice.noticeTitle}"></td>
-                <td>관리자</td>
-                <td th:text="${#dates.format(notice.noticeDate, 'yyyy-MM-dd')}" class="notice-date-cell"></td>
-                <td th:text="${notice.noticeCount}"></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <table class="notice-table">
+        <thead>
+        <tr>
+            <th style="width: 80px;">글 번호</th>
+            <th>글 제목</th>
+            <th style="width: 130px;">작성일자</th>
+            <th style="width: 80px;">조회수</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="notice : ${list}">
+            <td class="text-center" th:text="${notice.noticeId}"></td>
+            <td class="cursor-pointer" th:text="${notice.noticeTitle}"></td>
+            <td class="text-center notice-date-cell" th:text="${#dates.format(notice.noticeDate, 'yyyy-MM-dd')}"></td>
+            <td class="text-center" th:text="${notice.noticeCount}"></td>
+        </tr>
+        </tbody>
+    </table>
 
 
     <div class="notice-write-button-wrapper"
@@ -41,12 +36,8 @@
                 onclick="location.href='/notice/write'">공지사항 작성
         </button>
     </div>
-
-    <br>
-
-    <nav aria-label="Standard pagination example" style="float: right;">
+    <div class="notice-pagination-wrapper">
         <ul class="pagination">
-
             <!-- 이전 버튼 -->
             <li class="page-item" th:if="${pi.currentPage > 1}">
                 <a class="page-link" th:href="@{${loc}(page=${pi.currentPage - 1})}" aria-label="Previous">
@@ -76,32 +67,30 @@
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
-
         </ul>
-    </nav>
-
+    </div>
 </main>
 
 <div th:replace="~{fragments/footer :: footer}"></div>
 <div th:replace="~{fragments/backdrop :: backdrop}"></div>
 <div th:replace="~{fragments/mobileMenu :: mobileMenu}"></div>
 
-    <script th:inline="javascript">
-        document.addEventListener('DOMContentLoaded', () => {
-            const currentPage = /*[[${pi.currentPage}]]*/ 1;
-            const tbody = document.querySelector('tbody');
+<script th:inline="javascript">
+    document.addEventListener('DOMContentLoaded', () => {
+        const currentPage = /*[[${pi.currentPage}]]*/ 1;
+        const tbody = document.querySelector('tbody');
 
-            if (!tbody) return; // tbody 없으면 종료
+        if (!tbody) return; // tbody 없으면 종료
 
-            const trs = tbody.querySelectorAll('tr');
-            trs.forEach(tr => {
-                tr.addEventListener('click', () => {
-                    const noticeId = tr.querySelector('td').innerText.trim();
-                    location.href = '/notice/' + noticeId + '/' + currentPage;
-                });
+        const trs = tbody.querySelectorAll('tr');
+        trs.forEach(tr => {
+            tr.addEventListener('click', () => {
+                const noticeId = tr.querySelector('td').innerText.trim();
+                location.href = '/notice/' + noticeId + '/' + currentPage;
             });
         });
-    </script>
+    });
+</script>
 
 </body>
 </html>
