--- a/src/main/resources/templates/fragments/mobileMenu.html
+++ b/src/main/resources/templates/fragments/mobileMenu.html
@@ -48,6 +48,15 @@
                         <a href="/my/password" class="menu-item">
                             비밀번호 변경
                         </a>
+                        <a href="/my/moim/hosted/list">
+                            나의 개설 모임
+                        </a>
+                        <a href="/my/moim/joined/list">
+                            나의 참여 모임
+                        </a>
+                        <a href="/my/review/list">
+                            나의 리뷰
+                        </a>
                         <a href="/sign/out" class="menu-item">
                             로그아웃
                         </a>
