--- a/src/main/resources/templates/pages/my/password.html
+++ b/src/main/resources/templates/pages/my/password.html
@@ -7,19 +7,7 @@
 <body>
 <main layout:fragment="content" class="detail-container">
     <div class="my-container">
-        <div class="my-left-container">
-            <div class="my-menuBox">
-                <a href="/my/info">
-                    회원 정보 수정
-                </a>
-                <a href="/my/password">
-                    비밀번호 변경
-                </a>
-                <a href="/sign/out">
-                    로그아웃
-                </a>
-            </div>
-        </div>
+        <div class="my-left-container" th:replace="~{fragments/myLeft :: myLeft}"></div>
         <form class="my-right-container" method="POST" th:action="@{/my/password}">
             <div class="subTitle" style="margin-bottom: 30px;">비밀번호 변경</div>
             <div class="my-info-inputBox">
