--- a/src/main/resources/templates/pages/moim/create.html
+++ b/src/main/resources/templates/pages/moim/create.html
@@ -30,7 +30,7 @@
 
         <div class="moim-create-row">
             <label for="moimAttendeeCount">인원수</label>
-            <input type="number" id="moimAttendeeCount" name="moimAttendeeCount" placeholder="모임 제목을 입력하세요"/>
+            <input type="number" id="moimAttendeeCount" name="moimAttendeeCount" placeholder="모임 인원을 입력하세요"/>
         </div>
 
         <div class="moim-create-row">
