--- a/src/main/resources/templates/pages/moim/moimAdminPage.html
+++ b/src/main/resources/templates/pages/moim/moimAdminPage.html
@@ -5,41 +5,23 @@
 <div layout:fragment="content" class="main-wrapper main-wrapper-center">
 	<body>
 		<table class="table-box">
-				<tr>
-					<th>모임번호</th>
-					<th>모임명</th>
-					<th>호스트</th>
-					<th>관리</th>
-				</tr>
-				<tr>
-					<td>1</td>
-					<td>다섯명이 모여요</td>
-					<td>홍길동</td>
-					<td class="buttons">
-						<button class="edit">수정</button>
-						<button class="delete">삭제</button>
-					</td>
-				</tr>
-				<tr>
-					<td>2</td>
-					<td>다섯명이 모여요2</td>
-					<td>홍길동</td>
-					<td class="buttons">
-						<button class="edit">수정</button>
-						<button class="delete">삭제</button>
-					</td>
-				</tr>
-				<tr>
-					<td>3</td>
-					<td>다섯명이 모여요3</td>
-					<td>홍길동</td>
-					<td class="buttons">
-						<button class="edit">수정</button>
-						<button class="delete">삭제</button>
-					</td>
-				</tr>
+			<tr>
+				<th>모임번호</th>
+				<th>모임명</th>
+				<th>호스트</th>
+				<th>관리</th>
+			</tr>
+			<tr th:each="moim : ${moim}">
+				<td th:text="${moim.moimId}"></td>
+				<td th:text="${moim.moimTitle}"></td>
+				<td th:text="${moim.userId}"></td>
+				<td class="buttons">
+					<button class="edit">수정</button>
+					<button class="delete">삭제</button>
+				</td>
+			</tr>
 		</table>
-		</body>
-		</div>
-	
+	</body>
+</div>
+
 </html>
