호스트 모임 삭제

--- a/src/main/resources/templates/pages/moim/moimAdminPage.html
+++ b/src/main/resources/templates/pages/moim/moimAdminPage.html
@@ -16,7 +16,7 @@
 				<td th:text="${moim.moimTitle}"></td>
 				<td th:text="${moim.userId}"></td>
 				<td class="buttons">
-					<button class="edit">수정</button>
+					<button class="edit" onclick="location.href='pages/moim/modifyMoim'">수정</button>
 					<button class="delete">삭제</button>
 				</td>
 			</tr>
