--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -96,7 +96,7 @@
             </div>
 <!--             <button type="button" class="enroll-button-pc" th:if="${}" onclick="location.href='pages/moim/joinMoim'">참가취소하기</button> -->
             <!--  신청하기 버튼 > 참가신청 취소 버튼 ... -->
-            <button type="button" class="enroll-button-pc" th:if="${}" onclick="location.href='pages/moim/joinMoim'">신청하기</button>
+            <button type="button" class="enroll-button-pc" onclick="location.href='pages/moim/joinMoim'">신청하기</button>
         </div>
     </div>
     <!--리뷰 상세 : 모달창 띄우기-->
