--- a/src/main/resources/templates/pages/moim/moimAdminPage.html
+++ b/src/main/resources/templates/pages/moim/moimAdminPage.html
@@ -17,7 +17,7 @@
 				<td th:text="${moim.userId}"></td>
 				<td class="buttons">
 					<button class="edit" onclick="location.href='pages/moim/modifyMoim'">수정</button>
-					<button class="delete">삭제</button>
+					<button class="delete" onclick="location.href='pages/moim/deleteMoim'">삭제</button>
 				</td>
 			</tr>
 		</table>
