--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -18,7 +18,7 @@
         </div>
         <hr class="moim-enroll-divider-mobile"/>
         <div class="main-enroll-mobile">
-            <button onclick="location.href='pages/moim/JoinMoim'">신청하기</button>
+            <button onclick="location.href='pages/moim/joinMoim'">신청하기</button>
         </div>
 
         <div class="review-content">
