--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -1,118 +1,156 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/base}"
-      lang="ko">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layouts/base}" lang="ko">
 <body>
-<main class="main-wrapper" layout:fragment="content">
-    <div class="main-container"> <!--모임메인사진-->
-        <img th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${moim.fileConvert})}" alt="모임메인사진"
-             class="moim-main-image">
-        <!--모바일 버전 모임 제목, 설명, 신청버튼-->
-        <div class="moim-title-mobile" th:text="${moim.moimTitle}"></div>
-        <div class="moim-description-mobile">
-            <i class="ti ti-calendar-week"></i>[[${moimAddress1}]]&nbsp;[[${moimDate}]]
-        </div>
-        <div class="moim-fee-mobile">참가비
-            <div class="moim-fee-2-mobile" th:text="${moim.moimMoney}">원</div>
-        </div>
-        <hr class="moim-enroll-divider-mobile"/>
-        <div class="main-enroll-mobile">
-            <button onclick="location.href='pages/moim/joinMoim'">신청하기</button>
-        </div>
+	<main class="main-wrapper" layout:fragment="content">
+		<div class="main-container">
+			<!--모임메인사진-->
+			<img
+				th:src="@{https://kr.object.iwinv.kr/moida/{path}(path=${moim.fileConvert})}"
+				alt="모임메인사진" class="moim-main-image">
+			<!--모바일 버전 모임 제목, 설명, 신청버튼-->
+			<div class="moim-title-mobile" th:text="${moim.moimTitle}"></div>
+			<div class="moim-description-mobile">
+				<i class="ti ti-calendar-week"></i>[[${moimAddress1}]]&nbsp;[[${moimDate}]]
+			</div>
+			<div class="moim-fee-mobile">
+				참가비
+				<div class="moim-fee-2-mobile" th:text="${moim.moimMoney}">원</div>
+			</div>
+			<hr class="moim-enroll-divider-mobile" />
+			<div class="main-enroll-mobile">
+				<button onclick="location.href='pages/moim/joinMoim'">신청하기</button>
+			</div>
 
-        <div class="review-content">
-            <div class="reviewTitle">참여자 후기</div>
-            <hr class="moimReview-divider">
-            <button class="review-read-btn" onclick="location.href='/review/detail'">리뷰 상세보기</button>
-        </div>
-        <div class="review-container"> <!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
-            <div class="review-item" th:each="r : ${reviewList}">
-                <img src="https://media.bunjang.co.kr/product/283006372_1_1722771500_w360.jpg" alt="후기1"class="profile-img">
-                <div class="review-text">
-                    <div class="review-writer">[[${r.reviewId}]]</div>
-                    <div class="user-star">
-                        <i class="ti ti-carambola"></i>
-                        <i class="ti ti-carambola"></i>
-                        <i class="ti ti-carambola"></i>
-                        <i class="ti ti-carambola"></i>
-                        <i class="ti ti-carambola"></i>
-                    </div>
-                    <div class="review">
-                        <p class="reviewText">
-                            <span>
-                                [[${r.reviewContent}]]
-                            </span>
-                            <button class="more-btn" onclick="openModal(this)">더보기</button>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div> <!--review container-->
+			<div class="review-content">
+				<div class="reviewTitle">참여자 후기</div>
+				<hr class="moimReview-divider">
+				<button class="review-read-btn"
+					onclick="location.href='/review/detail'">리뷰 상세보기</button>
+			</div>
+			<div class="review-container">
+				<!--모임 후기 섹션 : 클릭 시 모달창으로 후기상세내용 보이기-->
+				<div class="review-item" th:each="r : ${reviewList}">
+					<img
+						src="https://media.bunjang.co.kr/product/283006372_1_1722771500_w360.jpg"
+						alt="후기1" class="profile-img">
+					<div class="review-text">
+						<div class="review-writer">[[${r.reviewId}]]</div>
+						<div class="user-star">
+							<i class="ti ti-carambola"></i> <i class="ti ti-carambola"></i> <i
+								class="ti ti-carambola"></i> <i class="ti ti-carambola"></i> <i
+								class="ti ti-carambola"></i>
+						</div>
+						<div class="review">
+							<p class="reviewText">
+								<span> [[${r.reviewContent}]] </span>
+								<button class="more-btn" onclick="openModal(this)">더보기</button>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--review container-->
 
-        <div class="moim-detail-title">상세정보
-            <hr class="moimInfo-divider">
-        </div>
-        <div class="main-moimInfo">
-            <div class="moimInfo-container">
-                <div class="moimInfo-title">
-                    <div class="moimInfo">
-                        <p id="content">
-                            [[${moimContent}]]
-                        </p>
-                    </div>
-                </div>
-                <button class="moreInfo" id="moreInfo">더보기</button>
-            </div>
-        </div> <!--moimInfo-->
-        <div class="host-intro">호스트 소개</div>
-        <div class="host-intro-2">앞으로 함께할 호스트에요</div>
-        <div class="host-container">
-            <div class="host-profile-img">
-                <img src="./hostPrifile01.jpg" alt="호스트 프로필 사진">
-            </div>
-            <div class="host-info-container">
-                <div class="host-name">[[${name}]]</div>
-                <div class="host-introduction">[[${hostIntro}]]</div>
-            </div>
-            <div class="host-moimImg"> <!--모임관련 대문사진 제외한 나머지 사진이 들어갑니다.-->
-            </div>
-        </div>
-
-
-    </div>
-    <div class="main-container2"> <!--모임 신청칸 pc-->
-        <div class="main-enroll-pc">
-            <button class="moim-category" type="button">[[${categoryName}]]</button> <!--카테고리-->
-            <div class="moim-title">[[${moimTitle}]]</div>
-            <div class="moim-description">
-                <div class="moim-arrange">
-                    <i class="ti ti-calendar-week"></i>[[${moimAddress1}]]&nbsp;[[${moimAddress2}]]&nbsp;[[${moimDate}]]
-                </div>
-                <div class="moim-fee">참가비
-                    <div class="moim-fee-2">[[${moimMoney}]]</div>
-                </div>
-                <hr class="moim-enroll-divider"/>
-            </div>
-
-            <button type="button" class="enroll-button-pc" onclick="location.href='pages/moim/joinMoim'">신청하기</button>
-        </div>
-    </div>
-    <!--리뷰 상세 : 모달창 띄우기-->
-    <div class="modal-backdrop" onclick="closeModal()" style="display: none;"></div>
-    <div class="modal" style="display: none;">
-        <div class="modal-content">
-            <span class="modal-close" onclick="closeModal()"></span>
-            <p id="reviewText"></p>
-        </div>
-    </div>
+			<div class="moim-detail-title">
+				상세정보
+				<hr class="moimInfo-divider">
+			</div>
+			<div class="main-moimInfo">
+				<div class="moimInfo-container">
+					<div class="moimInfo-title">
+						<div class="moimInfo">
+							<p id="content">[[${moimContent}]]</p>
+						</div>
+					</div>
+					<button class="moreInfo" id="moreInfo">더보기</button>
+				</div>
+			</div>
+			<!--moimInfo-->
+			<div class="host-intro">호스트 소개</div>
+			<div class="host-intro-2">앞으로 함께할 호스트에요</div>
+			<div class="host-container">
+				<div class="host-profile-img">
+					<img src="./hostPrifile01.jpg" alt="호스트 프로필 사진">
+				</div>
+				<div class="host-info-container">
+					<div class="host-name">[[${name}]]</div>
+					<div class="host-introduction">[[${hostIntro}]]</div>
+				</div>
+				<div class="host-moimImg">
+					<!--모임관련 대문사진 제외한 나머지 사진이 들어갑니다.-->
+				</div>
+			</div>
 
 
-</main>
+		</div>
+		<div class="main-container2">
+			<!--모임 신청칸 pc-->
+			<div class="main-enroll-pc">
+				<button class="moim-category" type="button">[[${categoryName}]]</button>
+				<!--카테고리-->
+				<div class="moim-title">[[${moimTitle}]]</div>
+				<div class="moim-description">
+					<div class="moim-arrange">
+						<i class="ti ti-calendar-week"></i>[[${moimAddress1}]]&nbsp;[[${moimAddress2}]]&nbsp;[[${moimDate}]]
+					</div>
+					<div class="moim-fee">
+						참가비
+						<div class="moim-fee-2">[[${moimMoney}]]</div>
+					</div>
+					<hr class="moim-enroll-divider" />
+				</div>
+
+				<button id="applyBtn" type="button" class="enroll-button-pc">신청하기</button>
 
 
-<div class="backdrop" onclick="hideBackdrop()"></div>
 
+
+			</div>
+		</div>
+		<!--리뷰 상세 : 모달창 띄우기-->
+		<div class="modal-backdrop" onclick="closeModal()"
+			style="display: none;"></div>
+		<div class="modal" style="display: none;">
+			<div class="modal-content">
+				<span class="modal-close" onclick="closeModal()"></span>
+				<p id="reviewText"></p>
+			</div>
+		</div>
+
+
+	</main>
+	<div id="joinMoimModal" class="modal" style="display: none;">
+		<div class="modal-content">
+			<p>신청하시겠습니까?</p>
+			<button id="joinMoimYes">예</button>
+			<button id="joinMoimNo">아니오</button>
+		</div>
+	</div>
+
+	<div class="backdrop" onclick="hideBackdrop()"></div>
+
+	<script>
+	//모임 참가신청 눌렀을때 모달창 띄우기
+		window.onload = () => {
+			const joinMoimModal = document.getElementById('applyBtn');
+			if(joinMoimModal != null){
+				joinMoimModal.addEventListener('click', () =>{
+					$('#joinMoimModal').modal('show');
+				});
+			}
+			
+			document.getElementById('joinMoimYes').addEventListener('click', ()=>{
+				form.action ='';
+				form.submit();
+			});
+			
+			document.getElementById('joinMoimNo').addEventListener('click', () => {
+			    document.getElementById('joinMoimModal').style.display = 'none';
+			});
+		}
+	</script>
 </body>
 
 </html>
