--- a/src/main/resources/templates/pages/moim/detail.html
+++ b/src/main/resources/templates/pages/moim/detail.html
@@ -137,7 +137,7 @@
 			const joinMoimModal = document.getElementById('applyBtn');
 			if(joinMoimModal != null){
 				joinMoimModal.addEventListener('click', () =>{
-					$('#joinMoimModal').modal('show');
+					 document.getElementById('joinMoimModal').style.display = 'block';
 				});
 			}
 			
