--- a/src/main/resources/templates/fragments/myLeft.html
+++ b/src/main/resources/templates/fragments/myLeft.html
@@ -22,6 +22,9 @@
         <a href="/my/review/list">
             나의 리뷰
         </a>
+        <a href="/my/qna/list">
+            나의 문의
+        </a>
         <a href="/sign/out">
             로그아웃
         </a>
