--- a/src/main/resources/templates/fragments/mobileMenu.html
+++ b/src/main/resources/templates/fragments/mobileMenu.html
@@ -57,6 +57,9 @@
                         <a href="/my/review/list">
                             나의 리뷰
                         </a>
+                        <a href="/my/qna/list">
+                            나의 문의
+                        </a>
                         <a href="/sign/out" class="menu-item">
                             로그아웃
                         </a>
