--- a/src/main/resources/templates/pages/category/list.html
+++ b/src/main/resources/templates/pages/category/list.html
@@ -39,6 +39,7 @@
                 </div>
             </a>
         </div>
+        <div th:replace="fragments/pagination :: pagination(${page}, ${size}, ${totalCount}, ${baseUrl})"></div>
     </div>
 </main>
 </body>
