--- a/src/main/resources/templates/pages/my/moim/list.html
+++ b/src/main/resources/templates/pages/my/moim/list.html
@@ -26,11 +26,14 @@
                         <div class="my-moim-attendee" th:text="${'모집인원 : ' + m.moimAttendeeCount + '명'}"></div>
                     </div>
                     <div class="my-moim-func">
-                        <a th:if="${type == 'hosted'}" class="modify-button" th:href="@{/moim/modify/{moimId}(moimId=${m.moimId})}">수정</a>
+                        <a th:if="${type == 'hosted'}" class="modify-button"
+                           th:href="@{/moim/modify/{moimId}(moimId=${m.moimId})}">수정</a>
                         <a th:if="${type == 'hosted'}" class="cancel-button" href="/moim/">모집중단</a>
                         <a th:if="${type == 'joined'}" class="cancel-button" href="/moim">참가취소</a></div>
                 </div>
             </div>
+
+            <div th:replace="fragments/pagination :: pagination(${page}, ${size}, ${totalCount}, ${baseUrl})"></div>
         </div>
     </div>
 </main>
