HTML : 페이지네이션 관련 디자인 수정

--- a/src/main/resources/templates/pages/category/list.html
+++ b/src/main/resources/templates/pages/category/list.html
@@ -39,7 +39,9 @@
                 </div>
             </a>
         </div>
-        <div th:replace="fragments/pagination :: pagination(${page}, ${size}, ${totalCount}, ${baseUrl})"></div>
+        <div th:if="${!#lists.isEmpty(moimList)}">
+            <div th:replace="fragments/pagination :: pagination(${page}, ${size}, ${totalCount}, ${baseUrl})"></div>
+        </div>
     </div>
 </main>
 </body>
