BACK : 참가자 확인 모달 생성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,8 +20,9 @@
     <script src="//cdn.jsdelivr.net/npm/@tabler/icons@latest/icons-react/dist/index.umd.min.js" defer></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" defer></script>
     <script type="application/javascript" src="/js/global.js" defer></script>
-<!--    <script type="application/javascript" src="/js/moim_detail.js" defer></script>-->
-<!--    <script src="/js/review_write.js" defer></script>-->
+    <script type="application/javascript" src="/js/moim.js" defer></script>
+    <!--    <script type="application/javascript" src="/js/moim_detail.js" defer></script>-->
+    <!--    <script src="/js/review_write.js" defer></script>-->
     <script type="application/javascript" src="/js/admin.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css"/>
 </head>
