--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -506,6 +506,23 @@ footer .footer-container .footer-copyrightText {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.modal-wrapper.active .modal-box .modal-header {
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.modal-wrapper.active .modal-box .modal-footer button {
+    border-radius: 8px;
+    padding: 10px;
+    border: none;
+}
+
+.modal-wrapper.active .modal-box .modal-footer button.ok-button {
+    background-color: var(--main-color);
+    color: white;
+}
+
 .text-center {
     text-align: center;
 }
