--- a/src/main/resources/static/css/my.css
+++ b/src/main/resources/static/css/my.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 20px;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 
 .my-container > .my-left-container {
@@ -110,8 +112,8 @@
 }
 
 .my-right-container .my-moim-item img {
-    width: 153px;
-    height: 110px;
+    width: 160px;
+    height: 114px;
     border-radius: 16px;
     object-fit: cover;
 }
@@ -120,6 +122,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 10px;
     padding: 10px 0;
 }
@@ -144,9 +147,9 @@
 
 .my-right-container .my-moim-item .my-moim-func button {
     width: 100%;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     border-radius: 8px;
-    padding: 10px;
+    padding: 5px;
     color: white;
     border: none;
     transition: background-color 0.3s ease;
@@ -155,15 +158,25 @@
     box-sizing: border-box;
 }
 
-.my-right-container .my-moim-item .my-moim-func button.modify-button {
+.my-right-container .my-moim-item .my-moim-func button.view-button {
     background-color: var(--main-color);
 }
 
+.my-right-container .my-moim-item .my-moim-func button.modify-button {
+    background-color: transparent;
+    border: 1px solid var(--main-color);
+    color: inherit;
+}
+
 .my-right-container .my-moim-item .my-moim-func button.cancel-button {
-    background-color: red;
+    background-color: transparent;
+    border: 1px solid red;
+    color: red;
 }
 
 .my-right-container .my-moim-item .my-moim-func button:disabled {
-    background-color: #aaaaaa;
+    background-color: #cccccc;
+    border: none;
+    color: #aaaaaa;
     cursor: not-allowed;
 }
