--- a/src/main/resources/static/css/notice.css
+++ b/src/main/resources/static/css/notice.css
@@ -45,7 +45,7 @@
 
 /* 작성 버튼 영역 */
 .notice-write-button-wrapper {
-    margin: 30px 0;
+    margin-top: 30px;
     text-align: right;
 }
 
@@ -209,6 +209,7 @@
 
 .notice-pagination-wrapper {
     width: 100%;
+    margin-top: 30px;
     display: flex;
     justify-content: flex-end;
 }
