--- a/src/main/resources/static/css/moim_detail.css
+++ b/src/main/resources/static/css/moim_detail.css
@@ -1,3 +1,13 @@
+.main-anchor-container {
+	width: 100%;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	gap: 30px;
+	align-items: flex-start;
+	    margin: 30px 0px 30px 30px;
+}
+
 /* 사진,설명 등 왼쪽칸 */
 .main-container{
     display: flex;
@@ -5,8 +15,6 @@
     align-items: flex-start;
     width: 100%;
     max-width: 700px;
-    margin-right: 30px;
-    margin-left: 20px;
 }
 
 /* 등록 - 오른쪽 칸 */
@@ -27,7 +35,6 @@
     max-width:700px;
     height: 400px;
     position: left;
-    margin: 20px 0 0 0;
     object-fit: cover;
     border-radius: 16px;
     box-sizing: border-box;
@@ -38,7 +45,6 @@
 .main-enroll-pc{
   display: flex;
   text-align: center;
-  position: fixed;
   width : 100%;
   max-width: 430px;
   height : 350px;
@@ -47,9 +53,9 @@
   border: 1px solid #ccc;
   border-radius: 16px;
   background: none;
-  margin-top: 20px;
   flex-direction: column; 
   align-items: flex-start;
+  box-sizing: border-box;
  
 }
 .moim-category{
@@ -77,6 +83,7 @@
 }
 /* 시간장소 섹션 */
 .moim-description{
+	width: 100%;
     display:flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -84,6 +91,7 @@
     font-weight: 300;
     color:#0000009d;
     margin-bottom: 0;
+    box-sizing: border-box;
 }
 
 /* 캘린더표시 : 시간 장소 */
@@ -114,7 +122,7 @@
     display: block;
     border: none;
     border-bottom: 2px solid rgba(150, 149, 149, 0.267);
-    width: 420px;
+    width: 100%;
     align-content: center;
     margin: 0 auto;
 }
