--- a/src/main/resources/templates/pages/my/review/review_write.html
+++ b/src/main/resources/templates/pages/my/review/review_write.html
@@ -15,7 +15,8 @@
 
         <!--리뷰 작성란-->
         <div class="review-content">
-            <form id="reviewForm" method="post" action="/review/enroll" enctype="multipart/form-data">
+            <form id="reviewForm" method="post" action="/review/enroll" enctype="multipart/form-data"
+            	input type="hidden" name="moimId" value="#{moimId}" >
                 <textarea id="reviewText" name="reviewText" rows="25" cols="150" placeholder="즐거웠던 기억을 되살려보세요! (10자 이상)"
                           required maxlength="1000"></textarea>
                 <div class="review-image-upload">
